Ajustes por construcción de imagen base