@@ -80,18 +80,19 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>2.20.1</version>
-              <configuration>
-                <!-- <forkMode>none</forkMode> -->
+              <configuration>              
+                 <forkCount>0</forkCount>
+                 <useSystemClassLoader>false</useSystemClassLoader>
+                <!--<reuseForks>false</reuseForks>
+                <forkMode>none</forkMode> -->
+                <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 <outputDirectory>${basedir}/target/surefire-reports</outputDirectory>
-                <!-- <useFile>false</useFile> -->
                 <suiteXmlFiles>
                   <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                 </suiteXmlFiles>
                 <systemPropertyVariables>
                     <propertyName>chrome</propertyName>
                 </systemPropertyVariables>
-                <!-- <parallel>methods</parallel>
-                <threadCount>10</threadCount> -->
               </configuration>
             </plugin>
         </plugins>
